--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -1,1 +1,21 @@
+<div class="home-slider">
+  <div><img src="{{ '/assets/images/image_1.jpg' | relative_url }}" alt="Image 1"></div>
+  <div><img src="{{ '/assets/images/image_2.jpg' | relative_url }}" alt="Image 2"></div>
+  <div><img src="{{ '/assets/images/image_3.jpg' | relative_url }}" alt="Image 3"></div>
+  <div><img src="{{ '/assets/images/image_4.jpg' | relative_url }}" alt="Image 4"></div>
+</div>
+
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    $('.home-slider').slick({
+      autoplay: true,
+      autoplaySpeed: 3000,
+      dots: true,
+      arrows: true,
+      infinite: true,
+      slidesToShow: 1,
+      slidesToScroll: 1
+    });
+  });
+</script>
 
